@@ -1,3 +1,6 @@
+3646.	[bug]		Journal filename string could be set incorrectly,
+                        causing garbage in log messages.  [RT #34738]
+
 	--- 9.6-ESV-R10 released ---
 
 3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is 
